demo3/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fast-api
spec:
  type: LoadBalancer
  selector:
    app: fast-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
